dotnet/versioned_docs/version-1.13.0/api/class-download.mdx
---
id: class-download
title: "Download"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

[Download] objects are dispatched by page via the [event Page.Download](./api/class-page.mdx#page-event-download) event.

All the downloaded files belonging to the browser context are deleted when the browser context is closed.

Download event is emitted once the download starts. Download path becomes available once download completes:

```csharp
var download = await page.RunAndWaitForDownloadAsync(async () =>
{
    await page.ClickAsync("#downloadButton");
});
Console.WriteLine(await download.PathAsync());
```

:::note
Browser context **must** be created with the `acceptDownloads` set to `true` when user needs access to the downloaded content. If `acceptDownloads` is not set, download events are emitted, but the actual download is not performed and user has no access to the downloaded files.
:::


- [Download.CancelAsync()](./api/class-download.mdx#download-cancel)
- [Download.CreateReadStreamAsync()](./api/class-download.mdx#download-create-read-stream)
- [Download.DeleteAsync()](./api/class-download.mdx#download-delete)
- [Download.FailureAsync()](./api/class-download.mdx#download-failure)
- [Download.Page](./api/class-download.mdx#download-page)
- [Download.PathAsync()](./api/class-download.mdx#download-path)
- [Download.SaveAsAsync(path)](./api/class-download.mdx#download-save-as)
- [Download.SuggestedFilename](./api/class-download.mdx#download-suggested-filename)
- [Download.Url](./api/class-download.mdx#download-url)

## Download.CancelAsync() {#download-cancel}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-cancel-return"/> &#60;[void]&#62;<a href="#download-cancel-return" class="list-anchor">#</a>

Cancels a download. Will not fail if the download is already finished or canceled. Upon successful cancellations, `download.failure()` would resolve to `'canceled'`.

## Download.CreateReadStreamAsync() {#download-create-read-stream}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-create-read-stream-return"/> &#60;[Stream]?&#62;<a href="#download-create-read-stream-return" class="list-anchor">#</a>

Returns readable stream for current download or `null` if download failed.

## Download.DeleteAsync() {#download-delete}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-delete-return"/> &#60;[void]&#62;<a href="#download-delete-return" class="list-anchor">#</a>

Deletes the downloaded file. Will wait for the download to finish if necessary.

## Download.FailureAsync() {#download-failure}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-failure-return"/> &#60;[string]?&#62;<a href="#download-failure-return" class="list-anchor">#</a>

Returns download error if any. Will wait for the download to finish if necessary.

## Download.Page {#download-page}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-page-return"/> &#60;[Page]&#62;<a href="#download-page-return" class="list-anchor">#</a>

Get the page that the download belongs to.

## Download.PathAsync() {#download-path}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-path-return"/> &#60;[string]?&#62;<a href="#download-path-return" class="list-anchor">#</a>

Returns path to the downloaded file in case of successful download. The method will wait for the download to finish if necessary. The method throws when connected remotely.

Note that the download's file name is a random GUID, use [Download.SuggestedFilename](./api/class-download.mdx#download-suggested-filename) to get suggested file name.

## Download.SaveAsAsync(path) {#download-save-as}
- `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-save-as-param-path"/> &#60;[string]&#62; Path where the download should be copied.<a href="#download-save-as-param-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-save-as-return"/> &#60;[void]&#62;<a href="#download-save-as-return" class="list-anchor">#</a>

Copy the download to a user-specified path. It is safe to call this method while the download is still in progress. Will wait for the download to finish if necessary.

## Download.SuggestedFilename {#download-suggested-filename}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-suggested-filename-return"/> &#60;[string]&#62;<a href="#download-suggested-filename-return" class="list-anchor">#</a>

Returns suggested filename for this download. It is typically computed by the browser from the [`Content-Disposition`](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Disposition) response header or the `download` attribute. See the spec on [whatwg](https://html.spec.whatwg.org/#downloading-resources). Different browsers can use different logic for computing it.

## Download.Url {#download-url}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-url-return"/> &#60;[string]&#62;<a href="#download-url-return" class="list-anchor">#</a>

Returns downloaded url.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[URL]: https://nodejs.org/api/url.html "URL"

[Action]: https://docs.microsoft.com/en-us/dotnet/api/system.action-1?view=net-5.0 "Action"
[Func]: https://docs.microsoft.com/en-us/dotnet/api/system.func-2?view=net-5.0 "Func"
[IEnumerable]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.ienumerable?view=net-5.0 "IEnumerable"
[TResult]: https://docs.microsoft.com/en-us/dotnet/api/system.threading.tasks.task-1?view=net-5.0 "TResult"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"